--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
 <h3>ショッピングカート</h3>
 
-<%= link_to 'カートを空にする', "#", "data-confirm" => "カート内にある全ての商品が削除されてしまいます。\n本当に削除してもよろしいでしょうか？" , class: "btn btn-sm btn-danger" %>
+<%= link_to 'カートを空にする', destroy_all_cart_items_path , method: :delete , "data-confirm" => "カート内にある全ての商品が削除されてしまいます。\n本当に削除してもよろしいでしょうか？" , class: "btn btn-sm btn-danger" %>
 
 <table>
   <thead>
@@ -13,23 +13,20 @@
     </tr>
   </thead>
   <tbody>
-    <% if current_customer.cart_items.present? %>
       <% @cart_items.each do |cart_item| %>
         <tr>
-          <td><%= image_tag cart_item.item.image, size: "30x30" %> 　<%= cart_item.item.name %></td>
-          <td><%= number_with_delimiter((cart_item.item.price * 1.1).floor) %></td>
-          <td>
-            <%= form_with model: cart_item, url: cart_item_path(cart_item), method: :patch do |f| %>
-               <!--f.select "#" -->
-               <%= cart_item.amount %>
-              <%= f.submit '変更', class: "btn btn-sm btn-success" %>
-            <% end %>
-          </td>
-          <td><%= number_with_delimiter(cart_item.item.price * cart_item.amount) %></td>
-          <td><%= link_to '削除する', cart_item_path(cart_item.item_id), method: :delete, "data-confirm" => "本当に削除しますか？" , class: "btn btn-sm btn-danger" %></td>
+          <td>画像だよ　<%= cart_item.item.name %></td>
+          <td><%= number_with_delimiter(cart_item.item.with_tax_price) %></td>
+           <td>
+              <%= form_with model:cart_item, url:cart_item_path(cart_item), method: :patch do |f| %>
+                <%= f.select :amount, *[1..10] %>
+                <%= f.submit "変更", class: "btn btn-success" %>
+              <% end %>
+            </td>
+          <td><%= number_with_delimiter(cart_item.subtotal) %></td>
+          <td><%= link_to '削除する', cart_item_path(cart_item.id), method: :delete, "data-confirm" => "本当に削除しますか？" , class: "btn btn-sm btn-danger" %></td>
         </tr>
       <% end %>
-    <% end %>
   </tbody>
 </table>
 
@@ -41,7 +38,7 @@
     <td>合計金額</td>
     <% total_price = 0 %>
     <% @cart_items.each do |cart_item| %>
-      <% total_price += cart_item.item.price * cart_item.amount %>
+      <% total_price += cart_item.subtotal %>
     <% end %>
     <td><%= number_with_delimiter(total_price) %></td>
   </tr>
