--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,7 +1,11 @@
-<h1 >About</h1>
+<div class="container">
+  <div class="rou text-center my-4">
+    <h1 style="font-size: 100px;">About</h1>
+  </div>
 
-<P>ながのCAKEは全国発送可能なケーキ屋さんです。<br/>
-お子様からお年寄りの方までお召し上がりいただけるよう、<br/>
-様々なバリエーションをご用意しております。<br/>
-また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br/>
-ぜひご注文ください。</P>
+    <h3 class="font-weight-bold text-center">ながのCAKEは全国発送可能なケーキ屋さんです。<br/>
+    お子様からお年寄りの方までお召し上がりいただけるよう、<br/>
+    様々なバリエーションをご用意しております。<br/>
+    また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br/>
+    ぜひご注文ください。</h3>
+</div>
