--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -44,4 +44,4 @@
   </tr>
 </table>
 
-<%= link_to '情報入力に進む', "#", class: "btn btn-sm btn-success" %>
+<%= link_to '情報入力に進む', new_order_path, class: "btn btn-sm btn-success" %>
