--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,9 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col-3">
-     <h1>Topだよ</h1>
-    </div>
-    <div class-"col-9">
+    <h1>テキスト</h1>
+  </div>
+    <div class-"row">
       <div class="d-flex flex-wrap">
         <% @items.each do |item| %>
           <%= link_to item_path(item.id), class: "text-decoration-none w-25" do %>
@@ -21,6 +20,6 @@
           <% end %>
         <% end %>
       </div>
-    </div
+    </div>
   </div>
 </div>
