--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,22 +3,20 @@
     <div class="col-4 d-flex justify-content-center">
       <%= image_tag @item.get_item_image(330, 220) %><br />
     </div>
-    <div class="col">
+    <div class="col-7 offset-1">
       <h2 style="font-weight: bold;"><%= @item.name %></h2>
-
       <p style="font-size: 20px;"><%= @item.introduction %></p><br />
-      
-      <p style="font-size: 25px; font-weight: bold;">¥<%= number_with_delimiter(@item.with_tax_price) %>(税込)</p>
-      
+      <p style="font-size: 25px; font-weight: bold;">¥<%= number_with_delimiter(@item.with_tax_price) %>(税込) </p>
+    </div>
+  </div>
+  <div class="row justify-content-end">
       <% if @item.is_active? %>
         <%= form_with model: @cart_item, url: cart_items_path, method: :post do |f| %>
-      
-          <%= f.hidden_field :item_id, :value => @item.id %>
-          <%= f.select :amount, *[1..10], include_blank: '個数選択' %>
-          <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
-      
+            <%= f.hidden_field :item_id, :value => @item.id %>
+            <%= f.select :amount, *[1..10], include_blank: '個数選択',class: "custom-select" %> 
+            <%= f.submit 'カートに入れる', class: 'btn btn-success' %>
         <% end %>
       <% end %>
-    </div>
+
   </div>
 </div>
