--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -7,7 +7,7 @@
           ようこそ、ながのCAKEへ！<br/>
           このサイトは、ケーキ販売のECサイトになります。<br/>
           会員でない方も商品の閲覧はできますが、<br/>
-          購入には会員登録が必要になります。 
+          購入には会員登録が必要になります。
         </h3>
       </div>
     </div>
@@ -19,7 +19,7 @@
           <div class="card m-2 p-1 card-hover">
             <%= image_tag item.get_item_image(200, 200) %>
             <div class="card-body text-body">
-              <h5 class="card-title text-primary"><%= item.name %></h5>
+              <h5 class="card-title text-primary"><%= item.name.truncate(13) %></h5>
               <p class="card-text text-primary">¥<%= item.price %></p>
             </div>
           </div>
