--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -16,7 +16,7 @@
             <%= link_to item_path(item.id), class: "text-decoration-none text-dark" do %>
               <%= image_tag item.get_item_image(260, 180), class: "mb-2" %><br />
               <div class="mb-2">
-                <%= item.name %>
+                <%= item.name.truncate(13) %>
               </div>
             <% end %>
 
