--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,12 @@
  *= require_tree .
  *= require_self
  */
- 
+
 .pagination {
   justify-content: center;
+}
+
+#cart_item_amount {
+  padding: 7px 20px;
+  margin-right: 20px;
 }
