--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -34,21 +34,24 @@
         <% end %>
     </tbody>
   </table>
-  
-  <table>
-    <tr>
-      <td>
-        <%= link_to '買い物を続ける', root_path, class: "btn btn-sm btn-primary" %>
-      </td>
-      <td>合計金額</td>
-      <% total_price = 0 %>
-      <% @cart_items.each do |cart_item| %>
-        <% total_price += cart_item.subtotal %>
-      <% end %>
-      <td><%= number_with_delimiter(total_price) %></td>
-    </tr>
-  </table>
-  
-  <%= link_to '情報入力に進む', new_order_path, class: "btn btn-sm btn-success" %>
+  <div class="row">
+    <div class="col">
+      <%= link_to '買い物を続ける', root_path, class: "btn btn-sm btn-primary" %>
+    </div>
+    <div class="col text-right">
+     <table class="table-bordered">
+      <tr>
+        <td>合計金額</td>
+        <% total_price = 0 %>
+        <% @cart_items.each do |cart_item| %>
+          <% total_price += cart_item.subtotal %>
+        <% end %>
+        <td><%= number_with_delimiter(total_price) %></td>
+      </tr>
+    </table>
+   </div>
+   <div class="row text-center">
+    <%= link_to '情報入力に進む', new_order_path, class: "btn btn-sm btn-success" %>
+   </div>
 
 </div>
