--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -35,10 +35,10 @@
     </tbody>
   </table>
   <div class="row">
-    <div class="col">
+    <div class="col-2">
       <%= link_to '買い物を続ける', root_path, class: "btn btn-sm btn-primary" %>
     </div>
-    <div class="col text-right">
+    <div class="col-8 text-right">
      <table class="table-bordered">
       <tr>
         <td>合計金額</td>
@@ -48,10 +48,10 @@
         <% end %>
         <td><%= number_with_delimiter(total_price) %></td>
       </tr>
-    </table>
-   </div>
-   <div class="row text-center">
+     </table>
+    </div>
+  </div>
+  <div class="row justify-content-center">
     <%= link_to '情報入力に進む', new_order_path, class: "btn btn-sm btn-success" %>
-   </div>
-
+  </div>
 </div>
