--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -34,25 +34,24 @@
         <% end %>
     </tbody>
   </table>
-  <div class="row">
-    <div class="col-2">
-
+  <div class="row my-3 justify-content-end">
+    <div class="col-2 ml-3">
       <%= link_to '買い物を続ける', root_path, class: "btn btn-sm btn-primary" %>
     </div>
-    <div class="col-8 text-right">
-     <table class="table-bordered">
+    <div class="col-9">
+     <table class="table-bordered"  style="float: right;">
       <tr>
-        <td>合計金額</td>
+        <td scope="col" style="width: 25%;">合計金額</td>
         <% total_price = 0 %>
         <% @cart_items.each do |cart_item| %>
           <% total_price += cart_item.subtotal %>
         <% end %>
-        <td><%= number_with_delimiter(total_price) %></td>
+        <td scope="col" style="width: 25%;"><%= number_with_delimiter(total_price) %></td>
       </tr>
      </table>
     </div>
   </div>
-  <div class="row justify-content-center">
+  <div class="row my-3 p-3 justify-content-center">
     <%= link_to '情報入力に進む', new_order_path, class: "btn btn-sm btn-success" %>
   </div>
 </div>
