--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -5,13 +5,13 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-7">
+    <div class="col-8">
       <table class="table-bordered">
         <tr>
-          <td>商品名</td>
-          <td>単価</td>
-          <td>数量</td>
-          <td>小計</td>
+          <td scope="col" style="width: 30%;">商品名</td>
+          <td scope="col" style="width: 20%;">単価</td>
+          <td scope="col" style="width: 20%;">数量</td>
+          <td scope="col" style="width: 20%;">小計</td>
         </tr>
       
         <% @total_price = 0 %>
@@ -29,7 +29,7 @@
        <% end %>
       </table>
     </div>
-    <div class="col-4 offset-md-1">
+    <div class="col-3 offset-md-1">
       <table class="table-bordered">
         <tr>
           <td>送料</td>
@@ -46,20 +46,20 @@
       </table>
     </div>
   </div>
-  <div class="row">
-    <table>
-      <tr>
-        <th>支払方法</th>
-        <td><%= @order.payment_method_i18n %></td>
-      </tr>
-      <tr>
-        <th>お届け先</th>
-        <td>
-          <%= @order.address %>
-          <%= @order.name %>
-        </td>
-      </tr>
-    </table>
+  <table>
+    <tr>
+      <th>支払方法</th>
+      <td><%= @order.payment_method_i18n %></td>
+    </tr>
+    <tr>
+      <th>お届け先</th>
+      <td>
+        <%= @order.address %>
+        <%= @order.name %>
+      </td>
+    </tr>
+  </table>
+  <div class="row justify-content-center">
     <%= form_with model: @order , url: orders_path, method: :post do |f| %>
       <%= f.hidden_field :customer_id, value: current_customer.id %>
       <%= f.hidden_field :payment_method, value: @order.payment_method %>
